# culi-scoring

./: .gitignore  .pre-commit-config.yaml  README.md  config_resolved.yaml  environment.json  git_info.json  pyproject.toml  requirements.txt  test_artifacts.py
.github/workflows/: ci.yml
assets/: cefr_label.csv
configs/: config.yaml  defaults.yaml
configs/callbacks/: default.yaml
configs/data/: example.yaml  icnale.yaml  icnale_base.yaml  icnale_cot.yaml  phi4.yaml
configs/deepspeed/: zero2.json  zero2_base.json
configs/download/: base.yaml  hf.yaml  hf_w2v2_conformer.yaml  phi4.yaml
docs/: MEMORY_QUICK_REF.md  ai_on_lanta.md  ddp_fix.md  memory_changes_summary.md  memory_optimization.md  overview.md
jobs/: eval_baseline_1.sh  train_baseline_1.sh  train_pipeline_2.sh
notebooks/: 00_sandbox.ipynb  01_eda.ipynb  02_error_analysis.ipynb  baseline_1.ipynb  main_1.ipynb  train_baseline_2.ipynb  visualize.ipynb
scripts/: activate_pytorch.sh  check_diagnostic.sh  debug_model.sh  diagnose.sh  eval_baseline_1.py  eval_baseline_1.sh  evaluate_baseline_1.py  inspect_batch.py  overfit_one_batch.py  plot_predictions.py  setup.py  show_diagnostic.sh  train_baseline2.py  train_baseline_1.py  train_baseline_2.py  train_baseline_2.sh  train_pipeline_2.py  train_pipeline_2.sh  train_pipeline_3.sh
src/: __init__.py  main.py  registry.py
tests/: __init__.py  test_datamodule_smoke.py  test_model_forward.py  test_sample.py  test_structured_score_evaluator.py  test_train_step_smoke.py
tools/: diagnose_training.py  log-menu.sh  memory_monitor.py  monitor.py  tools.py
(+180 files in other folders)
